<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C6C6"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:elevation="5dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/textView14"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="180dp"
                android:elevation="45dp"
                android:src="@drawable/alif"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                style="@style/txtStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="130dp"
                android:text="@string/ThreeMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/re_payment_Three"
                style="@style/txtStyle"
                android:layout_marginStart="60dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toStartOf="@+id/ThreeMonthTxtView"
                app:layout_constraintHorizontal_bias="0.359"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/txtStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/SixMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/re_payment_Six"
                style="@style/txtStyle"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toStartOf="@+id/SixMonthTxtView"
                app:layout_constraintHorizontal_bias="0.359"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/re_payment_Three" />

            <TextView
                android:id="@+id/textView3"
                style="@style/txtStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/NineMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/re_payment_Nine"
                style="@style/txtStyle"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toStartOf="@+id/NineMonthTxtView"
                app:layout_constraintHorizontal_bias="0.359"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/re_payment_Six" />

            <TextView
                android:id="@+id/textView4"
                style="@style/txtStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/TwelveMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/re_payment_Twelve"
                style="@style/txtStyle"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toStartOf="@+id/TwelveMonthTxtView"
                app:layout_constraintHorizontal_bias="0.349"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/re_payment_Nine" />

            <TextView
                android:id="@+id/textView5"
                style="@style/txtStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/FifteenMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/re_payment_fifteen"
                style="@style/txtStyle"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toStartOf="@+id/FifteenMonthTxtView"
                app:layout_constraintHorizontal_bias="0.349"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/re_payment_Twelve" />

            <TextView
                android:id="@+id/textView6"
                style="@style/txtStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/EighteenMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/re_payment_Eighteen"
                style="@style/txtStyle"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toStartOf="@+id/EighteenMonthTxtView"
                app:layout_constraintHorizontal_bias="0.349"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/re_payment_fifteen" />

            <TextView
                android:id="@+id/textView12"
                style="@style/txtStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/TwentyFourMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/re_payment_TwentyFour"
                style="@style/txtStyle"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toStartOf="@+id/TwentyFourMonthTxtView"
                app:layout_constraintHorizontal_bias="0.349"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/re_payment_Eighteen" />

            <TextView
                android:id="@+id/ThreeMonthTxtView"
                style="@style/txtStyle"
                android:layout_marginStart="160dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/SixMonthTxtView"
                style="@style/txtStyle"
                android:layout_marginStart="160dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/ThreeMonthTxtView" />

            <TextView
                android:id="@+id/NineMonthTxtView"
                style="@style/txtStyle"
                android:layout_marginStart="160dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/SixMonthTxtView" />

            <TextView
                android:id="@+id/TwelveMonthTxtView"
                style="@style/txtStyle"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/NineMonthTxtView" />

            <TextView
                android:id="@+id/FifteenMonthTxtView"
                style="@style/txtStyle"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/TwelveMonthTxtView" />

            <TextView
                android:id="@+id/EighteenMonthTxtView"
                style="@style/txtStyle"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/FifteenMonthTxtView" />

            <TextView
                android:id="@+id/TwentyFourMonthTxtView"
                style="@style/txtStyle"
                android:layout_marginStart="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/EighteenMonthTxtView" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="380dp"
                android:layout_marginEnd="70dp"
                android:hint="@string/amount"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <Button
                android:id="@+id/btnCount"
                style="@style/btnStyle"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:text="@string/btnName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />


            <TextView
                android:id="@+id/plusThree"
                style="@style/subTxtStyle"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                app:layout_constraintBottom_toTopOf="@+id/re_payment_Three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/plusSix"
                style="@style/subTxtStyle"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                app:layout_constraintBottom_toTopOf="@+id/re_payment_Six"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.77"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/plusNine"
                style="@style/subTxtStyle"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                app:layout_constraintBottom_toTopOf="@+id/re_payment_Nine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/plusTwelve"
                style="@style/subTxtStyle"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                app:layout_constraintBottom_toTopOf="@+id/re_payment_Twelve"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/plusFifteen"
                style="@style/subTxtStyle"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                app:layout_constraintBottom_toTopOf="@+id/re_payment_fifteen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/plusEighteen"
                style="@style/subTxtStyle"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                app:layout_constraintBottom_toTopOf="@+id/re_payment_Eighteen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/plusTwentyFour"
                style="@style/subTxtStyle"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                app:layout_constraintBottom_toTopOf="@+id/re_payment_TwentyFour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>


